--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,29 +31,25 @@
         "django.setup()\n",
         "\n",
         "from tsosi.models import Entity, Transfer\n",
+        "from tsosi.data.enrichment.database_related import (\n",
+        "    entities_with_identifier_data,\n",
+        "    update_entity_from_pid_records,\n",
+        "    new_identifiers_from_records,\n",
+        ")\n",
+        "from tsosi.data.enrichment.api_related import fetch_empty_identifier_records\n",
+        "from tsosi.models.static_data import fill_static_data\n",
         "from django.utils import timezone\n",
         "from django.db.models import Q\n",
         "\n",
         "\n",
         "@sync_to_async\n",
         "def run():\n",
-        "    fields = [\"id\", \"wikipedia_url\", \"wikipedia_extract\"]\n",
-        "    date_value = timezone.now() - timezone.timedelta(days=15)\n",
-        "    date_condition = Q(date_wikipedia_fetched__isnull=True) | Q(\n",
-        "        date_wikipedia_fetched__lt=date_value\n",
-        "    )\n",
-        "    instances = (\n",
-        "        Entity.objects.filter(is_active=True, wikipedia_url__isnull=False)\n",
-        "        .filter(date_condition)\n",
-        "        .filter(date_wikipedia_fetched__isnull=False)\n",
-        "        .values(\n",
-        "            \"id\", \"wikipedia_url\", \"wikipedia_extract\", \"date_wikipedia_fetched\"\n",
-        "        )\n",
-        "    )\n",
-        "    df = pd.DataFrame.from_records(instances)\n",
-        "    for c in fields:\n",
-        "        df[c] = None\n",
-        "\n",
+        "    # fill_static_data()\n",
+        "    fetch_empty_identifier_records(\"ror\")\n",
+        "    fetch_empty_identifier_records(\"wikidata\")\n",
+        "    update_entity_from_pid_records()\n",
+        "    df = new_identifiers_from_records()\n",
+        "    df = entities_with_identifier_data()\n",
         "    return df\n",
         "\n",
         "\n",
@@ -62,53 +58,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>wikipedia_url</th>\n",
-              "      <th>wikipedia_extract</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [id, wikipedia_url, wikipedia_extract]\n",
-              "Index: []"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "res"
+        "res.sort_values(\"id\")[\n",
+        "    [\n",
+        "        \"id\",\n",
+        "        \"name\",\n",
+        "        \"country\",\n",
+        "        \"ror_id\",\n",
+        "        \"ror_wikidata_id\",\n",
+        "        \"ror_name\",\n",
+        "        \"wikidata_id\",\n",
+        "        \"wikidata_name\",\n",
+        "        \"wikidata_ror_id\",\n",
+        "    ]\n",
+        "]"
       ]
     },
     {
@@ -176,23 +142,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[{'item': {'type': 'uri',\n",
-              "   'value': 'http://www.wikidata.org/entity/Q215432154632121'},\n",
-              "  'itemLabel': {'type': 'literal', 'value': 'Q215432154632121'}},\n",
-              " {'item': {'type': 'uri',\n",
-              "   'value': 'http://www.wikidata.org/entity/QNOT_EXISTING'},\n",
-              "  'itemLabel': {'type': 'literal', 'value': 'QNOT_EXISTING'}}]"
-            ]
-          },
-          "execution_count": 1,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import requests\n",
         "\n",
@@ -240,23 +190,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "KeyError",
-          "evalue": "'wikipedia_url'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# We only want wikipedia extract for entities with URL to the english wiki\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m mask \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwikipedia_url\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://en.wikipedia.org\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m df[mask]\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-            "File \u001b[0;32m~/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-            "File \u001b[0;32m~/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/pandas/core/indexes/range.py:417\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    415\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m    416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Hashable):\n\u001b[0;32m--> 417\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[1;32m    418\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n\u001b[1;32m    419\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'wikipedia_url'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "\n",
