--- a/backend/tsosi/data/preparation/doaj/test_data.ipynb
+++ b/backend/tsosi/data/preparation/doaj/test_data.ipynb
@@ -10,19 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ce046cf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "get_fixture_config() missing 1 required positional argument: 'date_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m file_path \u001b[38;5;241m=\u001b[39m app_settings\u001b[38;5;241m.\u001b[39mTSOSI_APP_DATA_DIR \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfixtures/doaj_example.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     21\u001b[0m date_data \u001b[38;5;241m=\u001b[39m date\u001b[38;5;241m.\u001b[39mtoday()\n\u001b[0;32m---> 22\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mget_fixture_config\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2024\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m output_folder \u001b[38;5;241m=\u001b[39m app_settings\u001b[38;5;241m.\u001b[39mTSOSI_APP_DATA_DIR \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfixtures/prepared_files\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     24\u001b[0m config\u001b[38;5;241m.\u001b[39mgenerate_data_file(output_folder)\n",
-      "\u001b[0;31mTypeError\u001b[0m: get_fixture_config() missing 1 required positional argument: 'date_data'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO raw_data_config - Preparing data with config `doaj_library_2024+`.\n",
+      "INFO raw_data_config - Successfully prepared the data for config doaj_library_2024+\n",
+      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/tsosi/data/fixtures/prepared_files/2025-04-16_doaj_library_2024_full.json\n"
      ]
     }
    ],
