More tests + fix merging and ingestion of entity <-> identifier relations

--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -43,26 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<NA>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(\n",
-    "    data=[\n",
-    "        [\"First_1\", \"First_2\", \"First_3\"],\n",
-    "        [None, \"Second_2\", \"Second_3\"],\n",
-    "        [None, None, \"Third_3\"],\n",
-    "        [\"Fourth_1\", None, None],\n",
-    "        [None, \"Fifth_2\", None],\n",
-    "    ],\n",
-    "    columns=[\"name_1\", \"name_2\", \"name_3\"],\n",
-    ")\n",
-    "res = df[[\"name_2\", \"name_1\", \"name_3\"]].bfill(axis=1)\n",
-    "for row in df.iterrows():\n",
-    "    pass\n",
-    "res"
+    "df = pd.DataFrame({\"test\": [\"ahah\", 4, None]})\n",
+    "df[\"test\"].astype(\"string\").iloc[2]"
    ]
   }
  ],
