Implement identifier records update

--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<NA>"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,8 +60,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame({\"test\": [\"ahah\", 4, None]})\n",
-    "df[\"test\"].astype(\"string\").iloc[2]"
+    "d_1 = {\"color\": {\"first\": [1, 2], \"second\": None}, \"date\": \"2021-01-10\"}\n",
+    "d_2 = {\"color\": {\"first\": [1, 2], \"second\": None}, \"date\": \"2021-01-10\"}\n",
+    "\n",
+    "d_1 == d_2"
    ]
   }
  ],
