--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -49,9 +49,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
-    "file = \"/home/guillaume-alzieu/Nextcloud/TSOSI_data/scipost/0_raw/2025-03-31_scipost_raw.json\"\n",
-    "df = pd.read_json(file)\n",
+    "file = (\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/scipost/0_raw/2025-03-31_scipost_raw.json\"\n",
+    ")\n",
+    "df = pd.read_json(str(file))\n",
     "mask = (~df[\"payment_date\"].isna()) & (df[\"status\"] != \"paid\")\n",
     "df[mask]"
    ]
@@ -89,7 +93,7 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
-    "date_str = \"2025-04-08\"\n",
+    "date_str = \"2025-04-28\"\n",
     "raw_file = f\"{date_str}_scipost_raw.json\"\n",
     "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
     "raw_path = str(raw_folder / raw_file)\n",
@@ -209,10 +213,11 @@
     "\n",
     "from tsosi.data.preparation.scipost.default import get_config\n",
     "\n",
-    "date_data = date(2025, 4, 8)\n",
+    "date_data = date(2025, 4, 28)\n",
+    "date_str = date_data.strftime(\"%Y-%m-%d\")\n",
     "file_path = (\n",
     "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/scipost/4_processed/2025-04-08_scipost_processed.xlsx\"\n",
+    "    / f\"Nextcloud/TSOSI_data/scipost/4_processed/{date_str}_scipost_processed.xlsx\"\n",
     ")\n",
     "config = get_config(str(file_path), \"Transfers\", date_data)\n",
     "config.generate_data_file()"
