Split date payment into 2 distinct fields - Clean Couperin transfers in DOAJ 2023-2024 years - Re-generate all data files

--- a/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
@@ -1,6 +1,38 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "\n",
+        "file_name = (\n",
+        "    Path.home()\n",
+        "    / \"Nextcloud/TSOSI_data/doab/0_raw/2025-02-11-DOAB_Library_Report.xlsx\"\n",
+        ")\n",
+        "\n",
+        "df = pd.read_excel(file_name)\n",
+        "amount_columns = [\n",
+        "    \"Annual amount (USD)\",\n",
+        "    \"Annual amount (GBP)\",\n",
+        "    \"Annual amount (EUR)\",\n",
+        "]\n",
+        "mask = None\n",
+        "for c in amount_columns:\n",
+        "    m_part = df[c].isna()\n",
+        "    mask = m_part if mask is None else mask & m_part\n",
+        "\n",
+        "write_path = (\n",
+        "    Path.home()\n",
+        "    / \"Nextcloud/TSOSI_data/doab/2025-02-11_DOAB_Library_suppory_no_amount.xlsx\"\n",
+        ")\n",
+        "df[mask].to_excel(write_path, index=False)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
