--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -1,6 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from datetime import date\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from get_data import get_scipost_raw_data, SCIPOST_TOKEN_URL\n",
+    "from tsosi.app_settings import app_settings\n",
+    "from datetime import date\n",
+    "from pathlib import Path\n",
+    "import requests\n",
+    "\n",
+    "today_str = date.today().strftime(\"%Y-%m-%d\")\n",
+    "raw_data_file = f\"{today_str}_scipost_raw.json\"\n",
+    "\n",
+    "raw_data_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
+    "\n",
+    "raw_path = str(raw_data_folder / raw_data_file)\n",
+    "# get_scipost_raw_data(dest_file=raw_path)\n",
+    "\n",
+    "print(\"Collecting OAuth2 token\")\n",
+    "auth_data = app_settings.SCIPOST_AUTH\n",
+    "\n",
+    "payload = {\n",
+    "    \"grant_type\": \"password\",\n",
+    "    \"username\": auth_data[\"username\"],\n",
+    "    \"password\": auth_data[\"password\"],\n",
+    "    \"scope\": \"read\",\n",
+    "}\n",
+    "auth = (auth_data[\"client_id\"], auth_data[\"client_secret\"])\n",
+    "token_data: dict = requests.post(SCIPOST_TOKEN_URL, payload, auth=auth)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,7 +102,7 @@
     "\n",
     "file = (\n",
     "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/scipost/0_raw/2025-03-31_scipost_raw.json\"\n",
+    "    / \"Nextcloud/TSOSI_data/scipost/0_raw/2025-05-06_scipost_raw.json\"\n",
     ")\n",
     "df = pd.read_json(str(file))\n",
     "mask = (~df[\"payment_date\"].isna()) & (df[\"status\"] != \"paid\")\n",
@@ -93,7 +142,7 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
-    "date_str = \"2025-04-28\"\n",
+    "date_str = \"2025-05-06\"\n",
     "raw_file = f\"{date_str}_scipost_raw.json\"\n",
     "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
     "raw_path = str(raw_folder / raw_file)\n",
@@ -213,7 +262,7 @@
     "\n",
     "from tsosi.data.preparation.scipost.default import get_config\n",
     "\n",
-    "date_data = date(2025, 4, 28)\n",
+    "date_data = date(2025, 5, 6)\n",
     "date_str = date_data.strftime(\"%Y-%m-%d\")\n",
     "file_path = (\n",
     "    Path.home()\n",
